k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-site
spec:
  type: ClusterIP                   # internal; the Ingress will expose it publicly
  selector:
    app: static-site                # send traffic to pods with this label
  ports:
    - port: 80                      # the Service port
      targetPort: 80                # the container port
